align logo correctly

--- a/utility/layout.css
+++ b/utility/layout.css
@@ -1,7 +1,11 @@
+.justify-self-start     { justify-self: start; }
+.justify-self-end       { justify-self: end; }
 .center-self-vertical   { margin-top: auto; margin-bottom: auto; }
 .center-self-horizontal { margin-left: auto; margin-right: auto; }
 
 @media screen and (min-width: 768px) {
+    .justify-self-start--tablet     { justify-self: start; }
+    .justify-self-end--tablet       { justify-self: end; }
     .center-self-vertical--tablet   { margin-top: auto; margin-bottom: auto; }
     .center-self-horizontal--tablet { margin-left: auto; margin-right: auto; }
 }
